--- a/Views/Shared/_Layoutweb.cshtml
+++ b/Views/Shared/_Layoutweb.cshtml
@@ -19,12 +19,98 @@
     <link rel="stylesheet" href="~/css/site.css"  />
     <link rel="alternate" type="application/rss+xml" Comments Feed" href="~/comments/feed/index.html" />
     <link rel="alternate" type="application/rss+xml" href="feed/index.html" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    @*<link rel="stylesheet" href="https://themewagon.github.io/ogani/css/style.css">*@
+    <link rel="stylesheet" href="./css//styleTips.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script>
         window._wpemojiSettings = { "baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/14.0.0\/72x72\/", "ext": ".png", "svgUrl": "https:\/\/s.w.org\/images\/core\/emoji\/14.0.0\/svg\/", "svgExt": ".svg", "source": { "concatemoji": "https:\/\/point.moxcreative.com\/yumma\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.3" } };
         /*! This file is auto-generated */
         !function (i, n) { var o, s, e; function c(e) { try { var t = { supportTests: e, timestamp: (new Date).valueOf() }; sessionStorage.setItem(o, JSON.stringify(t)) } catch (e) { } } function p(e, t, n) { e.clearRect(0, 0, e.canvas.width, e.canvas.height), e.fillText(t, 0, 0); var t = new Uint32Array(e.getImageData(0, 0, e.canvas.width, e.canvas.height).data), r = (e.clearRect(0, 0, e.canvas.width, e.canvas.height), e.fillText(n, 0, 0), new Uint32Array(e.getImageData(0, 0, e.canvas.width, e.canvas.height).data)); return t.every(function (e, t) { return e === r[t] }) } function u(e, t, n) { switch (t) { case "flag": return n(e, "\ud83c\udff3\ufe0f\u200d\u26a7\ufe0f", "\ud83c\udff3\ufe0f\u200b\u26a7\ufe0f") ? !1 : !n(e, "\ud83c\uddfa\ud83c\uddf3", "\ud83c\uddfa\u200b\ud83c\uddf3") && !n(e, "\ud83c\udff4\udb40\udc67\udb40\udc62\udb40\udc65\udb40\udc6e\udb40\udc67\udb40\udc7f", "\ud83c\udff4\u200b\udb40\udc67\u200b\udb40\udc62\u200b\udb40\udc65\u200b\udb40\udc6e\u200b\udb40\udc67\u200b\udb40\udc7f"); case "emoji": return !n(e, "\ud83e\udef1\ud83c\udffb\u200d\ud83e\udef2\ud83c\udfff", "\ud83e\udef1\ud83c\udffb\u200b\ud83e\udef2\ud83c\udfff") }return !1 } function f(e, t, n) { var r = "undefined" != typeof WorkerGlobalScope && self instanceof WorkerGlobalScope ? new OffscreenCanvas(300, 150) : i.createElement("canvas"), a = r.getContext("2d", { willReadFrequently: !0 }), o = (a.textBaseline = "top", a.font = "600 32px Arial", {}); return e.forEach(function (e) { o[e] = t(a, e, n) }), o } function t(e) { var t = i.createElement("script"); t.src = e, t.defer = !0, i.head.appendChild(t) } "undefined" != typeof Promise && (o = "wpEmojiSettingsSupports", s = ["flag", "emoji"], n.supports = { everything: !0, everythingExceptFlag: !0 }, e = new Promise(function (e) { i.addEventListener("DOMContentLoaded", e, { once: !0 }) }), new Promise(function (t) { var n = function () { try { var e = JSON.parse(sessionStorage.getItem(o)); if ("object" == typeof e && "number" == typeof e.timestamp && (new Date).valueOf() < e.timestamp + 604800 && "object" == typeof e.supportTests) return e.supportTests } catch (e) { } return null }(); if (!n) { if ("undefined" != typeof Worker && "undefined" != typeof OffscreenCanvas && "undefined" != typeof URL && URL.createObjectURL && "undefined" != typeof Blob) try { var e = "postMessage(" + f.toString() + "(" + [JSON.stringify(s), u.toString(), p.toString()].join(",") + "));", r = new Blob([e], { type: "text/javascript" }), a = new Worker(URL.createObjectURL(r), { name: "wpTestEmojiSupports" }); return void (a.onmessage = function (e) { c(n = e.data), a.terminate(), t(n) }) } catch (e) { } c(n = f(s, u, p)) } t(n) }).then(function (e) { for (var t in e) n.supports[t] = e[t], n.supports.everything = n.supports.everything && n.supports[t], "flag" !== t && (n.supports.everythingExceptFlag = n.supports.everythingExceptFlag && n.supports[t]); n.supports.everythingExceptFlag = n.supports.everythingExceptFlag && !n.supports.flag, n.DOMReady = !1, n.readyCallback = function () { n.DOMReady = !0 } }).then(function () { return e }).then(function () { var e; n.supports.everything || (n.readyCallback(), (e = n.source || {}).concatemoji ? t(e.concatemoji) : e.wpemoji && e.twemoji && (t(e.twemoji), t(e.wpemoji))) })) }((window, document), window._wpemojiSettings);
     </script>
+    <style>
+        .imgTips {
+            height: 250px;
+        }
+        .row {
+            justify-content: space-around;
+        }
+        .blog__item__text p  {
+            min-height: 155px;
+        }
+        .blog__btn {
+           
+        color: #fff;
+        border: 3px solid #c266d3;
+        background-image: -webkit-linear-gradient(30deg, #c266d3 50%, transparent 50%);
+        background-image: linear-gradient(30deg, #c266d3 50%, transparent 50%);
+        background-size: 500px;
+        background-repeat: no-repeat;
+        background-position: 0%;
+        -webkit-transition: background 300ms ease-in-out;
+        transition: background 300ms ease-in-out;
+        }
+        .blog__btn:hover {
+        background-position: 100%;
+        color: #c266d3;
+        }
+
+        .blog__item__text .blog__btn {
+            display: inline-block;
+            font-size: 14px;
+            color: #1c1c1c;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            border: 1px solid #b2b2b2;
+            padding: 14px 20px 12px;
+            border-radius: 25px;
+        }
+
+figure {
+	width: 100%;
+	height: 200px;
+	margin: 0;
+	padding: 0;
+	background: #fff;
+	overflow: hidden;
+}
+figure:hover+span {
+	bottom: -36px;
+	opacity: 1;
+}
+
+    .blog__item figure {
+	position: relative;
+}
+.blog__item__pic figure {
+	position: relative;
+}
+.blog__item__pic figure::before {
+	position: absolute;
+	top: 0;
+	left: -75%;
+	z-index: 2;
+	display: block;
+	content: '';
+	width: 50%;
+	height: 100%;
+	background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+	background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
+	-webkit-transform: skewX(-25deg);
+	transform: skewX(-25deg);
+}
+.blog__item__pic figure:hover::before {
+	-webkit-animation: shine .75s;
+	animation: shine .75s;
+}
+@@-webkit-keyframes shine {
+	100% {
+		left: 125%;
+	}
+
+
+	</style>
     <style>
         img.wp-smiley,
         img.emoji {
@@ -957,7 +1043,7 @@
                                                                 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-24"><a href="/Home/Team" class="elementor-sub-item">Team</a></li>
                                                                 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-29"><a href="~/index81b6.html?elementor_library=yumma-v1-archive" class="elementor-sub-item">Blog</a></li>
                                                                 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-30"><a href="~/2022/04/09/whats-the-difference-between-prawns-shrimp/index.html" class="elementor-sub-item">Single Post</a></li>
-                                                                <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-32"><a href="~/indexbd79.html?elementor_library=yumma-v1-error-404" class="elementor-sub-item">Error 404</a></li>
+                                                                <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-32"><a href="/Home/Tips" class="elementor-sub-item">Tips</a></li>
                                                             </ul>
                                                         </li>
                                                     </ul>
@@ -986,7 +1072,7 @@
                                                                 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-24"><a href="/Home/Team" class="elementor-sub-item" tabindex="-1">Team</a></li>
                                                                 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-29"><a href="~/index81b6.html?elementor_library=yumma-v1-archive" class="elementor-sub-item" tabindex="-1">Blog</a></li>
                                                                 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-30"><a href="~/2022/04/09/whats-the-difference-between-prawns-shrimp/index.html" class="elementor-sub-item" tabindex="-1">Single Post</a></li>
-                                                                <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-32"><a href="~/indexbd79.html?elementor_library=yumma-v1-error-404" class="elementor-sub-item" tabindex="-1">Error 404</a></li>
+                                                                <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-32"><a href="/Home/Tips" class="elementor-sub-item" tabindex="-1">Tips</a></li>
                                                             </ul>
                                                         </li>
                                                     </ul>
@@ -1067,7 +1153,7 @@
 
                                             <li>
 
-                                                <a asp-area="User" asp-page="/Home/User">
+                                                <a href="/Home/User">
                                                    User Profile
                                                 </a>
                                             </li>
