--- a/Views/Admin/FeedbackWeb.cshtml
+++ b/Views/Admin/FeedbackWeb.cshtml
@@ -2,7 +2,7 @@
 @inject IFeedBackRepository feedbackRepository;
 @{
 	Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
-	var feedbacks = await feedbackRepository.GetFeedbackByType("Web");
+	//var feedbacks = await feedbackRepository.GetFeedbackByType("Web");
 }
 <div class="content-body ">
 	<!-- row -->
