--- a/Views/Home/HomePage.cshtml
+++ b/Views/Home/HomePage.cshtml
@@ -37,12 +37,12 @@
                     </div>
                     <div class="elementor-element elementor-element-512040f elementor-widget elementor-widget-heading" data-id="512040f" data-element_type="widget" data-widget_type="heading.default">
                         <div class="elementor-widget-container">
-                            <h2 class="elementor-heading-title elementor-size-default">no matter how you cook, Yumma has many the recipes</h2>
+                            <h2 class="elementor-heading-title elementor-size-default">no matter how you cook, Taste of recipe has many the recipes</h2>
                         </div>
                     </div>
                     <div class="elementor-element elementor-element-c6a25fc elementor-widget elementor-widget-text-editor" data-id="c6a25fc" data-element_type="widget" data-widget_type="text-editor.default">
                         <div class="elementor-widget-container">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                            <p>Unleash Authentic Flavors - Explore and Share Recipes!</p>
                         </div>
                     </div>
                     <div class="elementor-element elementor-element-04555eb elementor-align-center elementor-widget elementor-widget-button" data-id="04555eb" data-element_type="widget" data-widget_type="button.default">
@@ -381,7 +381,7 @@
                     </div>
                     <div class="elementor-element elementor-element-14c1058 elementor-widget elementor-widget-text-editor" data-id="14c1058" data-element_type="widget" data-widget_type="text-editor.default">
                         <div class="elementor-widget-container">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                            <p>From appetizers to desserts, explore a world of culinary genres that cater to every palate. Unleash your inner chef and indulge in the art of cooking.</p>
                         </div>
                     </div>
                 </div>
