--- a/Views/Admin/FeedbackRecipe.cshtml
+++ b/Views/Admin/FeedbackRecipe.cshtml
@@ -1,45 +1,72 @@
 ﻿@using Project3.Repository;
 @inject IFeedBackRepository feedbackRepository;
+@inject IRecipeRepository recipeRepository;
 @{
 	Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
-	var feedbacks = await feedbackRepository.GetFeedbackByType("Recipe");
+	//var feedbacks = await feedbackRepository.GetFeedbackByType("Recipe");
+	var recipes = await recipeRepository.GetAllAsync();
+}
+@section Styles{
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" />
+	<link href="~/vendor/select2/css/select2.min.css" rel="stylesheet" type="text/css" />
+	<link href="~/vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet" type="text/css" />
+	<style>
+		.select2-selection--single {
+			height: 2rem !important;
+		}
+	</style>
 }
 <div class="content-body ">
 	<!-- row -->
 	<div class="container-fluid mb-3">
-		<div class="me-auto d-none d-lg-block ">
-			<a class="text-primary d-flex align-items-center mb-3 font-w500" href="/Admin/Index">
-				<svg class="me-3" width="24" height="12" viewBox="0 0 24 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path d="M0.274969 5.14888C0.27525 5.1486 0.275484 5.14827 0.275812 5.14799L5.17444 0.272997C5.54142 -0.0922061 6.135 -0.090847 6.5003 0.276184C6.86555 0.643168 6.86414 1.23675 6.49716 1.60199L3.20822 4.87499H23.0625C23.5803 4.87499 24 5.29471 24 5.81249C24 6.33027 23.5803 6.74999 23.0625 6.74999H3.20827L6.49711 10.023C6.86409 10.3882 6.8655 10.9818 6.50025 11.3488C6.13495 11.7159 5.54133 11.7171 5.17439 11.352L0.275764 6.47699C0.275483 6.47671 0.27525 6.47638 0.274921 6.4761C-0.0922505 6.10963 -0.0910778 5.51413 0.274969 5.14888Z" fill="#EA4989" />
-				</svg>
-				Back
-			</a>
-			<a class="mb-0 text-secondary fs-18 font-w500" href="">Feedback  /</a>
-			<a class="mb-0 font-w500 fs-18" href=""> Customer feedback feedback </a>
+		<div class="form-head d-flex mb-3 mb-lg-5 align-items-start ">
+			<div class="me-auto d-none d-lg-block mb-3 mr-3">
+				<a class="text-primary d-flex align-items-center mb-3 font-w500" href="/Admin/Index">
+					<svg class="me-3" width="24" height="12" viewBox="0 0 24 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M0.274969 5.14888C0.27525 5.1486 0.275484 5.14827 0.275812 5.14799L5.17444 0.272997C5.54142 -0.0922061 6.135 -0.090847 6.5003 0.276184C6.86555 0.643168 6.86414 1.23675 6.49716 1.60199L3.20822 4.87499H23.0625C23.5803 4.87499 24 5.29471 24 5.81249C24 6.33027 23.5803 6.74999 23.0625 6.74999H3.20827L6.49711 10.023C6.86409 10.3882 6.8655 10.9818 6.50025 11.3488C6.13495 11.7159 5.54133 11.7171 5.17439 11.352L0.275764 6.47699C0.275483 6.47671 0.27525 6.47638 0.274921 6.4761C-0.0922505 6.10963 -0.0910778 5.51413 0.274969 5.14888Z" fill="#EA4989" />
+					</svg>
+					Back
+				</a>
+				<a class="mb-0 text-secondary fs-18 font-w500" href="">Feedback  /</a>
+				<a class="mb-0 font-w500 fs-18" href=""> Customer feedback feedback </a>
+			</div>
+			<div class="ms-3 d-inline-block">
+				<label class="">Filter by recipe:</label>
+				<select id="single-select" class="select2">
+					<!option value="" >All recipe</!option>
+					@foreach (var recipe in recipes)
+					{
+						<!option value="@recipe.Title" >@recipe.Title</!option>
+					}
+					
+				</select>
+			</div>
 		</div>
+		
 		<div class="row">
 			<div class="col-xl-12">
 				<div class="card review-table p-0 border-0">
-					@foreach (var feedback in feedbacks)
+					<div id="content"></div>
+					@*@foreach (var feedback in feedbacks)
 					{
 						<div class="row align-items-center p-4  border-bottom">
 							<div class="col-xl-4 col-xxl-4 col-lg-5 col-md-12">
 								<div class="media align-items-center">
-									<img class="me-3 img-fluid rounded-circle" width="100" src="public/images/profile/5.jpg" alt="Taste of recipe">
+									<img class="me-3 img-fluid rounded-circle" width="100" src="/@feedback.UserAvatar" alt="Taste of recipe">
 									<div class="card-body p-0">
 										<!--Id feedback?-->
-										<p class="text-primary fs-14 mb-0">@feedback.Id</p>
+										<p class="text-primary fs-14 mb-0">@feedback.UserName</p>
 										<!--Username-->
-										<h3 class="fs-20 text-black font-w600 mb-2">MaiHoa ne</h3>
+										<h3 class="fs-20 text-black font-w450 mb-2">@feedback.RecipeName</h3>
 										<!--Time feedback-->
-										<span class="text-dark">@feedback.CreatedTime</span>
+										<span class="text-dark"></span>
 									</div>
 								</div>
 							</div>
 							<div class="col-xl-5 col-xxl-4 col-lg-7 col-md-12 mt-3 mt-lg-0">
 								<!--feedback-->
 								<p class="mb-0 text-dark">
-									@feedback.Content
+									@feedback.FeedbackContent
 								</p>
 							</div>
 							<div class="col-xl-3 col-xxl-4 col-lg-7 col-md-12 offset-lg-5 offset-xl-0 media-footer mt-xl-0 mt-3">
@@ -61,9 +88,30 @@
 								</div>
 							</div>
 						</div>
-					}
+					}*@
+				</div>
+				<div class="card-body p-0">
+					<div class="table-responsive ">
+						<table class="table order-request">
+							<tbody>
+							</tbody>
+						</table>
+						<div class="card-footer border-0 pt-0 text-center">
+							<ul class="pagination pagination-gutter pagination-primary no-bg" id="pageList">
+							</ul>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
+		
 	</div>
 </div>
+@section Script{
+	<script src="~/vendor/bootstrap-select/dist/js/bootstrap-select.min.js" type="text/javascript"></script>
+	<script src="~/vendor/select2/js/select2.full.min.js" type="text/javascript"></script>
+	<script src="~/js/plugins-init/select2-init.js" type="text/javascript"></script>
+	<script src="~/js/custom.min.js" type="text/javascript"></script>
+	<script src="~/js/deznav-init.js" type="text/javascript"></script>
+	<script src="/js/controller/feedback.js"></script>
+}
