--- a/Views/Home/Tips.cshtml
+++ b/Views/Home/Tips.cshtml
@@ -6,130 +6,122 @@
 }
 <style>
     .custom {
-        margin-bottom:30px
+        margin-bottom: 30px
     }
 </style>
 <section class="blog spad">
-    <div class="container">
-        <div class="row" style="text-align: center">
-            <div>
-                <span><h1>Tips Cooking</h1></span>
-            </div>
-            <!-- THAY BẰNG col-lg-12 NẾU MUỐN FULL MÀN HÌNH VÀ XÓA SIDEBAR    -->
-            <div class="col-lg-12 col-md-12 ">
-                <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-6 custom">
+    <div>
+        <span>
+            <h1> <class="textttttt">Tips Cooking</h1>
+        </span>
+        <div class="row-abc">
+            <div class="col-lg-6 col-md-6 col-sm-6 customm">
 
-                        <div class="blog__item">
-                            <div class="blog__item__pic">
-                                <figure>
-                                    <img class="imgTips" src="" alt="">
-                                </figure>
+                <div class="blog__item">
+                    <div class="blog__item__pic">
+                        <figure>
+                            <img class="imgTips" src="" alt="">
+                        </figure>
 
-                            </div>
-                            <div class="blog__item__text">
-                                <ul>
-                                  
-                                </ul>
-                                <h5><a href="#"></a></h5>
-                                <p></p>
-                                <a href="#" data-id="1" onclick="goToDetailPage(event)" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
-                            </div>
-                        </div>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-6 custom ">
-                        <div class="blog__item">
-                            <div class="blog__item__pic">
-                                <figure>
-                                    <img class="imgTips" src="" alt="">
-                                </figure>
-
-                            </div>
-                            <div class="blog__item__text">
-                                <ul>
-                                    
-                                </ul>
-                                <h5><a href="#"></a></h5>
-                                <p></p>
-                                <a href="#" data-id="2" onclick="goToDetailPage(event)" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
-                            </div>
-                        </div>
+                    <div class="blog__item__text">
+                        <ul>
+                        </ul>
+                        <h5><a href="#"></a></h5>
+                        <p></p>
+                        <a href="#" data-id="1" onclick="goToDetailPage(event)" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-6 custom ">
-                        <div class="blog__item">
-                            <div class="blog__item__pic">
-                                <figure>
-                                    <img class="imgTips" src="" alt="">
-                                </figure>
-
-                            </div>
-                            <div class="blog__item__text">
-                                <ul>
-                                   
-                                </ul>
-                                <h5><a href="#"></a></h5>
-                                <p></p>
-                                <a href="#" data-id="3" onclick="goToDetailPage(event)" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-6 col-sm-6 custom ">
-                        <div class="blog__item">
-                            <div class="blog__item__pic">
-                                <figure>
-                                    <img class="imgTips" src="" alt="">
-                                </figure>
-
-                            </div>
-                            <div class="blog__item__text">
-                                <ul>
-                                    
-                                </ul>
-                                <h5><a href="#"></a></h5>
-                                <p></p>
-                                <a href="#" data-id="4" onclick="goToDetailPage(event)" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-6 col-sm-6 custom ">
-                        <div class="blog__item">
-                            <div class="blog__item__pic">
-                                <figure>
-                                    <img class="imgTips" src="" alt="">
-                                </figure>
-
-                            </div>
-                            <div class="blog__item__text">
-                                <ul>
-                                   
-                                </ul>
-                                <h5><a href="#"></a></h5>
-                                <p></p>
-                                <a href="#" data-id="5" onclick="goToDetailPage(event)" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-6 col-sm-6 custom ">
-                        <div class="blog__item">
-                            <div class="blog__item__pic">
-                                <figure>
-                                    <img class="imgTips" src="" alt="">
-                                </figure>
-
-                            </div>
-                            <div class="blog__item__text">
-                                <ul>
-                                    
-                                </ul>
-                                <h5><a href="#"></a></h5>
-                                <p></p>
-                                <a href="#" data-id="6" onclick="goToDetailPage(event)" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
             </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 customm ">
+                <div class="blog__item">
+                    <div class="blog__item__pic">
+                        <figure>
+                            <img class="imgTips" src="" alt="">
+                        </figure>
+
+                    </div>
+                    <div class="blog__item__text">
+                        <ul>
+                        </ul>
+                        <h5><a href="#"></a></h5>
+                        <p></p>
+                        <a href="#" data-id="2" onclick="goToDetailPage(event)" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 customm ">
+                <div class="blog__item">
+                    <div class="blog__item__pic">
+                        <figure>
+                            <img class="imgTips" src="" alt="">
+                        </figure>
+
+                    </div>
+                    <div class="blog__item__text">
+                        <ul>
+                        </ul>
+                        <h5><a href="#"></a></h5>
+                        <p></p>
+                        <a href="#" data-id="3" onclick="goToDetailPage(event)" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 customm ">
+                <div class="blog__item">
+                    <div class="blog__item__pic">
+                        <figure>
+                            <img class="imgTips" src="" alt="">
+                        </figure>
+
+                    </div>
+                    <div class="blog__item__text">
+                        <ul>
+                        </ul>
+                        <h5><a href="#"></a></h5>
+                        <p></p>
+                        <a href="#" data-id="4" onclick="goToDetailPage(event)" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 customm ">
+                <div class="blog__item">
+                    <div class="blog__item__pic">
+                        <figure>
+                            <img class="imgTips" src="" alt="">
+                        </figure>
+
+                    </div>
+                    <div class="blog__item__text">
+
+                        <h5>
+                            <a href="#">
+
+                            </a>
+                        </h5>
+                        <p></p>
+                        <a href="#" data-id="5" onclick="goToDetailPage(event)" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 customm ">
+                <div class="blog__item">
+                    <div class="blog__item__pic">
+                        <figure>
+                            <img class="imgTips" src="" alt="">
+                        </figure>
+
+                    </div>
+                    <div class="blog__item__text">
+                        <ul>
+                        </ul>
+                        <h5><a href="#"></a></h5>
+                        <p></p>
+                        <a href="#" data-id="6" onclick="goToDetailPage(event)" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </section>
@@ -175,10 +167,10 @@
             demoContent: "Making crispy French fries at home can be achieved with the right technique. Here are some tips for making crispy French fries",
 
             content: "Choose the Right Potato:Use high-starch potatoes like Russet potatoes. They have a high starch content and low moisture, which helps create a crispy exterior.Cut the Fries Uniformly:Cut the potatoes into evenly sized sticks to ensure they cook uniformly. Aim for about 1/4 to 1/2 inch in thickness. Dry Thoroughly:After soaking, drain the fries and pat them completely dry with paper towels. Removing excess moisture is crucial for crispy results. Double Fry Method:The double fry method is a secret to achieving extra crispiness. Fry the potatoes in batches for the first time at a lower temperature (about 325°F or 160°C) until they are soft but not browned. Remove and drain. Then, increase the oil temperature to 375°F (190°C) and fry the potatoes a second time until golden brown and crispy. Don't Overcrowd the Fryer:Fry the potatoes in batches, making sure not to overcrowd the fryer. Overcrowding lowers the oil temperature and can lead to soggy fries.",
-            imgUrl:"https://i.pinimg.com/236x/fb/8f/15/fb8f150136519354d8a9aa871ff583c6.jpg",
+            imgUrl: "https://i.pinimg.com/236x/fb/8f/15/fb8f150136519354d8a9aa871ff583c6.jpg",
             Intro: "1. Start with a Good Broth: Pho broth is the heart of the dish. Use a combination of beef bones (such as oxtail, marrow, and knuckle bones) and aromatic spices (like star anise, cinnamon, cloves, and cardamom) to make a flavorful broth. Roast the bones before simmering for added depth of flavor. Simmer Slowly: Simmer the broth for a long time (at least 6-8 hours) to extract all the flavors from the bones and spices. This slow cooking process is essential for a rich and aromatic broth. 3. Use Quality Ingredients: Choose high-quality meat for your pho. Thinly sliced beef (raw or cooked) and beef meatballs are traditional choices. You can also use chicken for chicken pho (pho ga) 4. Thinly Slice the Meat: If using raw beef, slice it as thinly as possible. It will cook quickly in the hot broth. If using cooked beef, slice it thinly so that it can easily soak up the broth's flavor.",
             note: "Don't be afraid to experiment with various seasonings and toppings, such as garlic parmesan, truffle oil, or chili cheese, to add extra flavor and texture to your fries."
-            
+
 
         },
         {
