--- a/Views/Shared/_Layoutweb.cshtml
+++ b/Views/Shared/_Layoutweb.cshtml
@@ -191,6 +191,10 @@
             color: #fff;
             text-decoration: none
         }
+
+        .img-item a {
+            width: 100%
+        }
     </style>
     <style id='global-styles-inline-css'>
         body {
@@ -719,32 +723,32 @@
 
         /*
 
-                        .theto{
-                            width: 105px;
-                            position: absolute;
-                            left: 170px;
-                }
-                .thebe{
+                                .theto{
+                                    width: 105px;
+                                    position: absolute;
+                                    left: 170px;
+                        }
+                        .thebe{
 
-                    width: 100%;
-                    height: 30px;
-                    margin-top: 10px;
-                }
-                .theul{
-                    background-color: var(--e-global-color-d7d34cf );
-                    width: 100%;
-                    height: 100%;
-                    border-radius: 20px 20px 20px 20px;
-                }
-                theli{
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
+                            width: 100%;
+                            height: 30px;
+                            margin-top: 10px;
+                        }
+                        .theul{
+                            background-color: var(--e-global-color-d7d34cf );
+                            width: 100%;
                             height: 100%;
-                            color: #ffff;
-                            font-size: 12px;
-                }
-                        */
+                            border-radius: 20px 20px 20px 20px;
+                        }
+                        theli{
+                                    display: flex;
+                                    align-items: center;
+                                    justify-content: center;
+                                    height: 100%;
+                                    color: #ffff;
+                                    font-size: 12px;
+                        }
+                                */
     </style>
     <style>
         .pb-3 {
